# containerlog

./: .flake8  .jenkins  .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: lint.yaml  precommit-update.yaml  test.yaml
benchmarks/: benchmark_containerlog.py  benchmark_std.py  benchmark_std_proxy.py  plot.py  requirements.txt  run.sh
benchmarks/results/: benchmark-containerlog-0.2.0.md  benchmark-containerlog-0.3.0.md
containerlog/: __init__.py  contextvars.py  types.py
containerlog/proxy/: std.py
docs/: benchmarks.md  contributing.md  index.md  install.md  requirements.txt
docs/usage/: basic.md  proxy_std.md
examples/async_context_binding/: main.py
examples/basic_uvicorn_fastapi/: main.py
tests/: conftest.py  test_containerlog.py  test_contextvars.py
tests/proxy/: conftest.py  test_std.py
